# crisp-game-lib-portable-sdl-with-duktape

./: .gitignore  .gitmodules  babel.config.json  compileJSGames.sh  packJSGames.py  package.json  pnpm-lock.yaml
games/: accelb.es5.js  aerialbar.es5.js  antlion.es5.js  arcfire.es5.js  attackchain.es5.js  balance.es5.js  balloon.es5.js  ballsbombs.es5.js  balltour.es5.js  bamboo.es5.js  baroll.es5.js  baserunnerdash.es5.js  bblast.es5.js  bcannon.es5.js  bladedancer.es5.js  blockstacker.es5.js  bmath.es5.js  boarding.es5.js  bombup.es5.js  bottop.es5.js  breedc.es5.js  bridgecross.es5.js  bsfish.es5.js  bwalls.es5.js  cardq.es5.js  castn.es5.js  catapult.es5.js  catchingwheel.es5.js  catep.es5.js  chargebeam.es5.js  circlew.es5.js  cleaner.es5.js  cleanrobo.es5.js  clockturret.es5.js  cnodes.es5.js  colorroll.es5.js  count.es5.js  counterb.es5.js  crossline.es5.js  ctower.es5.js  (+192 more)
src/cglpESP32QEMU/: .gitignore  CMakeLists.txt  README.md  key_client.py  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
src/cglpESP32QEMU/main/: CMakeLists.txt  LGFX_QemuRGB.cpp  LGFX_QemuRGB.hpp  cglpESP32QEMU.cpp  idf_component.yml
src/cglpSDL2/: CLoadGames.c  CLoadGames.h  CMakeLists.txt  Makefile  cglpSDL2.c
src/cglpSDL3/: CLoadGames.c  CLoadGames.h
src/lib/: cglp.c  cglp.h  cglp_duk.c  cglp_duk.h  cglp_duk_native.c  cglp_duk_native.h  cglp_duk_native_vector.c  cglp_duk_native_vector.h  cglp_duk_utils.c  cglp_duk_utils.h  duk_config.h  duk_print_alert.c  duk_print_alert.h  machineDependent.h  menu.c  menu.h  menuGameList.c
src/lib/loaders/: games_filesystem.c  games_packed.c  hiscores_esp32_nvs.c  hiscores_filesystem.c
src/lib/tests/: cglp_duk_native_test.c  compile.sh
